Aggiunte alcune pagine loggate

--- a/mappa_logged.html
+++ b/mappa_logged.html
@@ -15,6 +15,7 @@
 	</head>
 
 	<body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -155,47 +156,24 @@
         </div>
       </div>
     </nav>
-
+  
     <main class="container">
-
       <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
-          <li class="active">Risultati</li>
+        <li><a href="indexlogged.html">Home</a></li>
+        <li class="active">Dove trovarci</li>
       </ol>
-      
+
       <div class="panel panel-default">
         <header class="panel-heading">
-          <h1>Vediamo cosa ho trovato!</h1>
+          <h1>
+            Dove trovarci?
+          </h1>
+          <p class="lead">Niente di più facile.</p>
         </header>
 
-        <div class="panel-body">
-          <div class="alert alert-info" role="alert">
-            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
-          </div>
-          <div class="media">
-            <a href="blog_logged.html#ricercato1">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
-                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
-              </div>
-            </a>
-          </div>
-          <div class="media">
-            <a href="foto1_logged.html">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Immagine - Foto gallery</h4>
-                Apri nella foto gallery
-              </div>
-            </a>
-          </div>
-        </div>
+        <section class="panel-body">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9192.048856377149!2d-87.63926804638194!3d41.89624864861953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x391a5a350090350e!2sClark%2FDivision!5e0!3m2!1sit!2sit!4v1515862348157" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </section>
       </div>
     </main>
 
