--- a/storia_logged.html
+++ b/storia_logged.html
@@ -15,6 +15,7 @@
 	</head>
 
 	<body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -156,48 +157,19 @@
       </div>
     </nav>
 
-    <main class="container">
-
+	<main class="container">
       <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
-          <li class="active">Risultati</li>
+        <li><a href="indexlogged.html">Home</a></li>
+        <li class="active">Storia</li>
       </ol>
-      
-      <div class="panel panel-default">
-        <header class="panel-heading">
-          <h1>Vediamo cosa ho trovato!</h1>
-        </header>
-
-        <div class="panel-body">
-          <div class="alert alert-info" role="alert">
-            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
-          </div>
-          <div class="media">
-            <a href="blog_logged.html#ricercato1">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
-                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
-              </div>
-            </a>
-          </div>
-          <div class="media">
-            <a href="foto1_logged.html">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Immagine - Foto gallery</h4>
-                Apri nella foto gallery
-              </div>
-            </a>
-          </div>
-        </div>
+      <div class="jumbotron">
+          <h1>La nostra storia</h1>
+          <hr>
+          <p>Fondato nel 1977 da Rob Doc Jr., Shroom Space Ind. è leader mondiale nel settore di voli spaziali privati. Grazie alle tecnologie all'avanguardia progettate dai nostri ingegneri e alla perfetta coordinazione dei nostri team, siamo riusciti a produrre servizi unici e innovativi che ci hanno permesso di sbaragliare la concorrenza sotto ogni aspetto.</p>
+          <p>I nostri clienti hanno speso complessivamente circa cinque mesi nello spazio e hanno viaggiato per oltre 42 milioni di miglia, con un aumento del 30% delle richieste di volo nell'ultimo decennio.</p>
+          <p>Se hai domande non esitare a contattarci o continua a guardare le nostre esperienze.</p>
       </div>
-    </main>
+		</main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
