--- a/opportunita_logged.html
+++ b/opportunita_logged.html
@@ -15,6 +15,7 @@
 	</head>
 
 	<body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -155,48 +156,79 @@
         </div>
       </div>
     </nav>
-
+  
     <main class="container">
 
       <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
-          <li class="active">Risultati</li>
+        <li><a href="indexlogged.html">Home</a></li>
+        <li class="active">Opportunità lavorative</li>
       </ol>
-      
+
       <div class="panel panel-default">
-        <header class="panel-heading">
-          <h1>Vediamo cosa ho trovato!</h1>
+        <header class="panel-heading well">
+          <h1>
+            Cerchi un lavoro?
+          </h1>
+          <p class="lead">Contattaci, potremmo essere l'azienda giusta per te!</p>
         </header>
 
-        <div class="panel-body">
-          <div class="alert alert-info" role="alert">
-            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
-          </div>
-          <div class="media">
-            <a href="blog_logged.html#ricercato1">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
-                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
-              </div>
-            </a>
-          </div>
-          <div class="media">
-            <a href="foto1_logged.html">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Immagine - Foto gallery</h4>
-                Apri nella foto gallery
+        <section class="panel-body">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3>Pilota di space shuttle</h3>
+            </div>
+            <a href="scrivici_logged.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job1.jpg">
+                </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Patente di space shuttle</p>
+                  <p class="text-info">4000 ore di volo all'attivo</p>
+                  <p class="text-info">Navicella spaziale</p>
+                </div>
               </div>
             </a>
           </div>
-        </div>
+
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+             <h3>Meccanico aerospaziale</h3>
+            </div>
+            <a href="scrivici_logged.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job2.png">
+                </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Laurea in ingegneria aerospaziale</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3>Stormtrooper</h3>
+            </div>
+            <a href="scrivici_logged.html">
+              <div class="row">
+                <div class="col-sm-4">
+                  <img class="media-object img-responsive" src="img/job3.jpg">
+                </div>
+                <div class="col-sm-8">
+                  <h3>Requisiti:</h3>
+                  <p class="text-info">Fedeltà all'Imperatore</p>
+                  <p class="text-info">Scarse capacità di mira</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </section>
       </div>
+
     </main>
 
 		<footer class="footer">
