--- a/scrivici_logged.html
+++ b/scrivici_logged.html
@@ -12,9 +12,14 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+		
 	</head>
 
 	<body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -156,48 +161,41 @@
       </div>
     </nav>
 
-    <main class="container">
-
-      <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
-          <li class="active">Risultati</li>
-      </ol>
-      
-      <div class="panel panel-default">
-        <header class="panel-heading">
-          <h1>Vediamo cosa ho trovato!</h1>
-        </header>
-
-        <div class="panel-body">
-          <div class="alert alert-info" role="alert">
-            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
+		<section class="container">
+        <ol class="breadcrumb">
+            <li><a href="indexlogged.html">Home</a></li>
+            <li class="active">Scrivici</li>
+          </ol>
+      <div class="jumbotron">    
+			<h1>Scrivici</h1><br>
+  			<div class="row">
+  				
+  				<div class="col-sm-7 slideanim">
+  					<div class="row">
+  						<div class="col-sm-6 form-group">
+  							<input class="form-control" id="name" name="name" placeholder="Name" type="text" required value="Mario Rossi">
+  						</div>
+  						<div class="col-sm-6 form-group">
+  							<input class="form-control" id="email" name="email" placeholder="Email" type="email" required value="user@email.com">
+  						</div>
+  					</div>
+  					<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+  					<div class="row">
+  						<div class="col-sm-12 form-group">
+  							<button class="btn btn-default pull-right" type="submit">Send</button>
+  						</div>
+  					</div>
           </div>
-          <div class="media">
-            <a href="blog_logged.html#ricercato1">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
-                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
-              </div>
-            </a>
+          <div class="col-sm-1"></div>
+          <div class="col-sm-4">
+            <p>Contact us and we'll get back to you within 24 hours.</p>
+            <footer><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</footer>
+            <footer><span class="glyphicon glyphicon-phone"></span> +00 1515151515</footer>
+            <footer><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</footer>
           </div>
-          <div class="media">
-            <a href="foto1_logged.html">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Immagine - Foto gallery</h4>
-                Apri nella foto gallery
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </main>
+  			</div>
+			</div>
+		</section>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
