--- a/video_logged.html
+++ b/video_logged.html
@@ -158,41 +158,181 @@
     </nav>
 
 	<main class="container">
+
 		<ol class="breadcrumb">
 			<li><a href="indexlogged.html">Home</a></li>
-			<li><a href="foto_logged.html">Foto Gallery</a></li>
-			<li class="active">Foto</li>
+			<li class="active">Video Gallery</li>
 		</ol>
 
-		<section class="panel panel-default">
+		<div class="panel panel-default">
 			<header class="panel-heading">
 				<h1>
 				<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
-					Space Shroom Foto Gallery
+					Space Shroom Video Gallery
 				</h1>
-				<p class="lead">Galleria delle nostre foto.</p>
+				<p class="lead">Galleria dei nostri video.</p>
 			</header>
 
-			<div class="panel-body">
-				<h3>Immagine della SSI</h3>
-				<div class="thumbnail">
-					<img src="img/img3.jpg" alt="" class="img-rounded img-responsive" style="width:100%">
-					<div class="caption pull">
-						<small> Tags:</small>
-						<span class="btn label label-primary">Space</span>
-						<span class="btn label label-default">Universe</span>
-						<cite class="pull-right">Marco CAR</cite>
+			<section class="panel-body">
+				<div class="panel panel-info">
+					<div class="panel-heading">
+						<button class="btn btn-primary" data-toggle="collapse" data-target="#filter">Esegui un filtro di ricerca</button>
+					</div>
+					<div id="filter" class="panel-collapse collapse">
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-md-6">
+									<p>Che cosa ti interessa?</p>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Space</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="">Universe</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Astronauts</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Earth</label>
+									</div>
+									<div class="checkbox">
+											<label><input type="checkbox" value="">Flight</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="">Sky</label>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<a href="videofiltrato_logged.html"><button class="btn btn-success btn-lg">Applica</button></a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt hic eveniet blanditiis incidunt quidem. Voluptas obcaecati quasi voluptate autem placeat culpa, odit minus voluptatem odio dolor? Voluptas aliquid reprehenderit perferendis eaque ea blanditiis soluta, eligendi tempore officiis accusantium laborum fugiat maiores aliquam voluptates harum accusamus ut minima, nam saepe facere voluptate vero molestiae? Harum vel repellendus inventore vitae voluptates quisquam aspernatur incidunt vero dolores natus laudantium, exercitationem fuga eum quos doloribus pariatur hic ab accusamus atque? Alias voluptatum sit unde aperiam! Magni quis dolor, eos nihil reprehenderit, error cumque ipsa minima, excepturi eum quibusdam! Natus numquam tenetur et eveniet enim!</p>
-				<p>Officia facilis consequuntur pariatur mollitia obcaecati reiciendis, possimus provident ipsam laborum quo excepturi maiores voluptate, placeat, sit eum ut qui quia? Excepturi vero velit reiciendis molestiae doloribus corrupti at recusandae cupiditate a cum! Et quasi non delectus optio. Voluptates, laborum, blanditiis explicabo aliquam est ipsa magnam deleniti cupiditate quae nemo praesentium veniam, alias maiores sapiente repellendus provident autem? Pariatur sapiente officiis, iusto dicta, repellat ipsa nulla labore blanditiis obcaecati, expedita reprehenderit doloribus voluptates vel quia! Dolorem, reprehenderit harum eum modi sapiente labore voluptatibus, magni blanditiis at ut accusamus ullam ex. Debitis, veniam qui dignissimos beatae aperiam eveniet quisquam architecto commodi?</p>
-				<p>Dicta, iure consectetur voluptate adipisci omnis perferendis, facilis, ad voluptates exercitationem inventore impedit nemo. Ad, excepturi sed. Quia a autem culpa distinctio doloribus nam blanditiis est minima dolores impedit incidunt at optio, assumenda voluptate molestias sint, beatae facere architecto quis delectus atque cupiditate totam, veniam fuga! Autem omnis explicabo atque doloribus ullam ad sequi eligendi recusandae deserunt repellendus numquam ratione delectus optio repudiandae ea quibusdam, sint sunt voluptates cumque maxime quisquam incidunt totam corrupti! Eveniet esse ipsum ex animi consectetur eius excepturi voluptas illo? Necessitatibus, nemo! Reiciendis sed aperiam, voluptate, molestias dignissimos aliquid laudantium fuga, numquam cumque distinctio earum assumenda?</p>
-				<p>Quidem sit quaerat iure doloremque? Eius omnis voluptatem ex tempore, excepturi saepe vel quod, maxime eum delectus explicabo ut nobis dolorem odio unde nihil obcaecati rerum, neque earum placeat labore incidunt. Illum rem, dolorem temporibus blanditiis eligendi esse et maiores deserunt laudantium! Excepturi impedit deleniti explicabo quos quas. Tempore magni dolorem voluptate eius voluptatibus eveniet aliquam enim. Ipsam repellat cupiditate explicabo, consequuntur quia blanditiis ut delectus perferendis, nisi, voluptatem tenetur? Odit dignissimos nesciunt iste? Cum similique, harum reprehenderit earum beatae sunt! Fugiat maiores molestias voluptatibus aliquam, cupiditate cumque, fugit tempore, vitae porro accusamus dicta consequuntur? Eius praesentium ipsam ipsa nulla!</p>
-				<p>Saepe velit dicta cupiditate corrupti ullam et quasi exercitationem voluptas impedit distinctio enim optio sit consequatur praesentium labore placeat, voluptate deserunt? Optio quod sint tempora voluptate! Pariatur, accusamus ipsam! Voluptatum, necessitatibus accusamus suscipit dolores blanditiis perferendis quaerat quisquam placeat quasi doloribus. Explicabo officia magni, vitae maxime eligendi laudantium tenetur! Vitae quam, repellat officiis aliquam reiciendis exercitationem officia necessitatibus quae non ipsum voluptates error facilis, ullam accusantium odio dicta itaque porro esse suscipit qui veniam ut nam eos amet. Est nobis libero veritatis, corporis in autem blanditiis nam minus voluptatem quas adipisci alias sed vero explicabo, ad officiis aliquid aut similique?</p>
-			</div>
 
-		</section>
+				<div class="row">
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-primary">Space</span>
+								<span class="btn label label-default">Universe</span>
+							</div>
+							</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Astronauts</span>
+								<span class="btn label label-primary">Space</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-success">Earth</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-success">Earth</span>
+								<span class="btn label label-warning">Flight</span>
+								<span class="btn label label-primary">Space</span>
+								<span class="btn label label-default">Universe</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-info">Sky</span>
+								<span class="btn label label-success">Earth</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<h4>Titolo</h4>
+							<div class="embed-responsive embed-responsive-16by9 div_style">
+								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
+		</div>
 	</main>
 
 	<footer class="footer">
