--- a/vision_logged.html
+++ b/vision_logged.html
@@ -156,48 +156,38 @@
       </div>
     </nav>
 
-    <main class="container">
-
+		<main class="container">
       <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li><a href="ricercaglobale_logged.html">Ricerca</a></li>
-          <li class="active">Risultati</li>
+        <li><a href="indexlogged.html">Home</a></li>
+        <li class="active">Vision</li>
       </ol>
-      
       <div class="panel panel-default">
-        <header class="panel-heading">
-          <h1>Vediamo cosa ho trovato!</h1>
-        </header>
-
+        <div class="panel-heading jumbotron">
+          <h1>Visione aziendale</h1>
+          <blockquote class="blockquote-reverse">
+            <p>There is only Passion.</p>
+            <p> Through Passion I gain Strength.</p>
+            <p>Through Strength I gain Power.</p>
+            <p>Through Power I gain Victory.</p>
+            <p>Through Victory my chains are Broken.</p>
+            <p>The Force shall free me.</p>
+            <footer>DOC, Shroom Space Industries CEO</footer>
+          </blockquote>
+        </div>
         <div class="panel-body">
-          <div class="alert alert-info" role="alert">
-            <a href="#" class="alert-link">Ecco i tuoi risultati:</a>
-          </div>
-          <div class="media">
-            <a href="blog_logged.html#ricercato1">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Come procede la guerra? - Blog</h4>
-                Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati... Continua nel Blog
-              </div>
-            </a>
-          </div>
-          <div class="media">
-            <a href="foto1_logged.html">
-              <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Immagine - Foto gallery</h4>
-                Apri nella foto gallery
-              </div>
-            </a>
-          </div>
+          <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vel facilis veniam expedita non cumque fugiat quam modi cupiditate est aut, officia minus, quis qui repellendus ab itaque sed, cum eos ipsa. Provident, dolorum porro. Dicta vitae, optio blanditiis recusandae quos vero quisquam tenetur mollitia corrupti voluptas reprehenderit aliquam laboriosam aut excepturi dolores saepe? Dignissimos minima deleniti perspiciatis atque, consequatur quibusdam, quisquam dicta repellat provident maiores aliquam. Error sequi animi totam illo corporis accusamus expedita iusto aliquam neque sunt ipsa quibusdam, unde excepturi nihil, maxime in repellat inventore est officia obcaecati. Debitis ipsam natus, nulla fuga nostrum similique architecto neque!
+          </blockquote>
+          <blockquote class="blockquote-reverse">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, in est! Voluptatibus delectus culpa similique illum molestiae nam dolorem molestias officiis provident corporis exercitationem blanditiis voluptas quaerat tempora adipisci, nostrum repellendus harum expedita asperiores praesentium incidunt. Quibusdam amet aliquid quidem quasi quas dolores numquam voluptatem dolorum iusto. Eaque sint dolor aperiam culpa cupiditate alias ex commodi. Nam, ducimus officia! Quam excepturi optio vel qui debitis amet ipsam fuga beatae natus quis, earum esse deserunt unde tempora expedita delectus voluptatem minus adipisci, sapiente a dolore nulla veniam distinctio. Mollitia fugit possimus quibusdam ratione tenetur aliquid provident unde inventore reiciendis velit odit voluptate eum sunt, nisi, veniam obcaecati iste. Eos, earum quis atque iusto accusamus id provident sunt maiores! Officia dolores, non voluptatibus nostrum ipsa expedita autem?
+          </blockquote>
+          <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit adipisci, et quod deserunt beatae dolore quibusdam, rerum eum, vel ex expedita accusamus aperiam rem modi eveniet quis dolorem! Deserunt quis sit voluptate eos soluta doloremque? Error aut facilis nostrum doloremque eveniet molestias earum asperiores repellendus velit sint quia commodi, perspiciatis eius cumque quos aperiam excepturi nisi reiciendis similique delectus ipsa exercitationem repudiandae debitis. Ad sunt officiis laboriosam placeat nobis repellendus nostrum aut facilis. Quas laborum placeat architecto corporis, dicta unde voluptatem, nostrum quam excepturi fugit sunt magni eveniet illo amet?
+          </blockquote>
+          
         </div>
       </div>
-    </main>
+		</main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
