--- a/privacy_logged.html
+++ b/privacy_logged.html
@@ -159,7 +159,7 @@
     <main class="container">
 
       <ol class="breadcrumb">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="indexlogged.html">Home</a></li>
         <li class="active">Privacy</li>
 			</ol>
       
