Aggiunto news_logged e fix link in pagine logged

--- a/indexlogged.html
+++ b/indexlogged.html
@@ -119,7 +119,7 @@
             </li>
             <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -141,7 +141,7 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href=".">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
@@ -183,7 +183,7 @@
 				</div>
 			
 				<div class="carousel-caption">
-					<p><a class="btn btn-lg btn-primary" href="esperienze.html" role="button">Vai alle esperienze</a></p>
+					<p><a class="btn btn-lg btn-primary" href="esperienze_logged.html" role="button">Vai alle esperienze</a></p>
 				</div>
 
 				<!-- Controls -->
@@ -277,13 +277,13 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							<a href="mappasito.html">Mappa sito</a>
+							<a href="mappasito_logged.html">Mappa sito</a>
 						</li>
 						<li>
-							<a href="privacy.html">Privacy Policy</a>
+							<a href="privacy_logged.html">Privacy Policy</a>
 						</li>
 						<li>
-							<a href="copyright.html">Copyright</a>
+							<a href="copyright_logged.html">Copyright</a>
 						</li>
 					</ul>
 				</div>
