--- a/mappasito_logged.html
+++ b/mappasito_logged.html
@@ -118,7 +118,7 @@
             </li>
             <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -140,7 +140,7 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href=".">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
@@ -244,14 +244,14 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active">
-              <a href="mappasito.html">Mappa sito</a>
+            <li>
+              <a href="mappasito_logged.html">Mappa sito</a>
             </li>
             <li>
-              <a href="privacy.html">Privacy Policy</a>
+              <a href="privacy_logged.html">Privacy Policy</a>
             </li>
             <li>
-              <a href="copyright.html">Copyright</a>
+              <a href="copyright_logged.html">Copyright</a>
             </li>
           </ul>
         </div>
