--- a/user.html
+++ b/user.html
@@ -40,11 +40,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="esperienze.html">Catalogo completo</a>
+                  <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li>
-                  <a href="esperienza.html">Missione circumlunare</a>
+                  <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -73,11 +73,11 @@
             </li>
             <!-- News -->
             <li>
-              <a href="news.html">News</a>
+              <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
             <li>
-              <a href="blog.html">Blog</a>
+              <a href="blog_logged.html">Blog</a>
             </li>
             <!-- Multimedia -->
             <li class="dropdown">
@@ -86,16 +86,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="foto.html">Foto gallery</a>
+                  <a href="foto_logged.html">Foto gallery</a>
                 </li>
                 <li>
-                  <a href="video.html">Video gallery</a>
+                  <a href="video_logged.html">Video gallery</a>
                 </li>
               </ul>
             </li>
             <!-- Partners -->
             <li>
-              <a href="partners.html">Partners</a>
+              <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
             <li class="dropdown">
@@ -104,16 +104,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="vision.html">Vision</a>
+                  <a href="vision_logged.html">Vision</a>
                 </li>
                 <li>
-                  <a href="storia.html">Storia</a>
+                  <a href="storia_logged.html">Storia</a>
                 </li>
                 <li>
-                  <a href="team.html">Il Team</a>
+                  <a href="team_logged.html">Il Team</a>
                 </li>
                 <li>
-                  <a href="opportunita.html">Opportunità lavorative</a>
+                  <a href="opportunita_logged.html">Opportunità lavorative</a>
                 </li>
               </ul>
             </li>
@@ -124,10 +124,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="scrivici.html">Scrivici</a>
+                  <a href="scrivici_logged.html">Scrivici</a>
                 </li>
                 <li>
-                  <a href="mappa.html">Dove trovarci</a>
+                  <a href="mappa_logged.html">Dove trovarci</a>
                 </li>
               </ul>
             </li>
@@ -141,13 +141,13 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href=".">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
             <!-- Ricerca -->
             <li>
-              <a href="ricercaglobale.html">
+              <a href="ricercaglobale_logged.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-md hidden-lg"> Cerca nel sito</span>
               </a>
@@ -215,37 +215,37 @@
       </div>
 		</main>
 
-		<footer class="footer">
-			<nav class="navbar-inverse">
-				<div class="container">
-					<ul class="nav navbar-nav">
-						<li>
-							<a href="#facebook">Facebook</a>
-						</li>
-						<li>
-							<a href="#Twitter">Twitter</a>
-						</li>
-						<li>
-							<a href="#LinkedIn">LinkedIn</a>
-						</li>
-						<li>
-							<a href="#YouTube">YouTube</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="mappasito.html">Mappa sito</a>
-						</li>
-						<li>
-							<a href="privacy.html">Privacy Policy</a>
-						</li>
-						<li>
-							<a href="copyright.html">Copyright</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</footer>
+    <footer class="footer">
+      <nav class="navbar-inverse">
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#facebook">Facebook</a>
+            </li>
+            <li>
+              <a href="#Twitter">Twitter</a>
+            </li>
+            <li>
+              <a href="#LinkedIn">LinkedIn</a>
+            </li>
+            <li>
+              <a href="#YouTube">YouTube</a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="mappasito_logged.html">Mappa sito</a>
+            </li>
+            <li>
+              <a href="privacy_logged.html">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="copyright_logged.html">Copyright</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
 
 		<!-- SCRIPTS -->
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
