--- a/esperienza.html
+++ b/esperienza.html
@@ -182,8 +182,8 @@
 
 		<main class="container">
       <ol class="breadcrumb">
-        <li><a href="indexlogged.html">Home</a></li>
-        <li><a href="esperienze_logged.html">Esperienze</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="esperienze.html">Esperienze</a></li>
         <li class="active">Esperienza</li>
       </ol>
 
