--- a/esperienze_logged.html
+++ b/esperienze_logged.html
@@ -1,22 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Shroom Space Industries</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <!-- STYLES -->
+    <link rel="stylesheet" href="style/screen.css">
+    <link rel="stylesheet" href="style/print.css">
+    <link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Shroom Space Industries</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <body>
 
-	<!-- STYLES -->
-	<link rel="stylesheet" href="style/screen.css">
-	<link rel="stylesheet" href="style/print.css">
-	<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-</head>
-
-<body>
-
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -26,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
+          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -34,12 +33,12 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- Esperienze -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li>
+                <li class="active">
                   <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
@@ -117,7 +116,7 @@
                 </li>
               </ul>
             </li>
-            <!-- Contattaci -->
+            <!-- Contatti -->
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
@@ -157,44 +156,108 @@
       </div>
     </nav>
 
-	<main class="container">
-		<ol class="breadcrumb">
-			<li><a href="indexlogged.html">Home</a></li>
-			<li><a href="foto_logged.html">Foto Gallery</a></li>
-			<li class="active">Foto</li>
-		</ol>
+    <main class="container">
 
-		<section class="panel panel-default">
-			<header class="panel-heading">
-				<h1>
-				<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
-					Space Shroom Foto Gallery
-				</h1>
-				<p class="lead">Galleria delle nostre foto.</p>
-			</header>
+			<ol class="breadcrumb">
+				<li><a href="indexlogged.html">Home</a></li>
+				<li class="active">Esperienze</li>
+			</ol>
 
-			<div class="panel-body">
-				<h3>Immagine della SSI</h3>
-				<div class="thumbnail">
-					<img src="img/img3.jpg" alt="" class="img-rounded img-responsive" style="width:100%">
-					<div class="caption pull">
-						<small> Tags:</small>
-						<span class="btn label label-primary">Space</span>
-						<span class="btn label label-default">Universe</span>
-						<cite class="pull-right">Marco CAR</cite>
+			<div class="panel panel-default">
+				<header class="panel-heading">
+					<h1>Le nostre esperienze</h1>
+					<p class="lead">Shroom Space ti offre dei momenti indimenticabili!</p>
+				</header>
+
+				<div class="panel-body">
+					<div class="row">
+						<blockquote class="col-sm-9">
+							<p>
+								Le nostre esperienze ti permettono di vivere momenti indimenticabili, insieme ai tuoi amici e familiari!
+							</p>
+							<footer>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora maxime commodi illum explicabo assumenda ut ullam aut eum ex suscipit. Quas ea similique molestiae! Quisquam eos saepe harum voluptatem accusamus.
+							</footer>
+						</blockquote>
+
+						<aside class="col-sm-3">
+							<div class="panel panel-default">
+								<form class="panel-body" action="ricerca.html">
+									<label for="blogsearch">Cerca un'esperienza!</label> 
+									<input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
+								</form>
+							</div>
+						</aside>
 					</div>
+			
+					<!-- Elenco esperienze -->
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="thumbnail">
+								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<div class="caption">
+									<h4>Heading</h4>
+									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt hic eveniet blanditiis incidunt quidem. Voluptas obcaecati quasi voluptate autem placeat culpa, odit minus voluptatem odio dolor? Voluptas aliquid reprehenderit perferendis eaque ea blanditiis soluta, eligendi tempore officiis accusantium laborum fugiat maiores aliquam voluptates harum accusamus ut minima, nam saepe facere voluptate vero molestiae? Harum vel repellendus inventore vitae voluptates quisquam aspernatur incidunt vero dolores natus laudantium, exercitationem fuga eum quos doloribus pariatur hic ab accusamus atque? Alias voluptatum sit unde aperiam! Magni quis dolor, eos nihil reprehenderit, error cumque ipsa minima, excepturi eum quibusdam! Natus numquam tenetur et eveniet enim!</p>
-				<p>Officia facilis consequuntur pariatur mollitia obcaecati reiciendis, possimus provident ipsam laborum quo excepturi maiores voluptate, placeat, sit eum ut qui quia? Excepturi vero velit reiciendis molestiae doloribus corrupti at recusandae cupiditate a cum! Et quasi non delectus optio. Voluptates, laborum, blanditiis explicabo aliquam est ipsa magnam deleniti cupiditate quae nemo praesentium veniam, alias maiores sapiente repellendus provident autem? Pariatur sapiente officiis, iusto dicta, repellat ipsa nulla labore blanditiis obcaecati, expedita reprehenderit doloribus voluptates vel quia! Dolorem, reprehenderit harum eum modi sapiente labore voluptatibus, magni blanditiis at ut accusamus ullam ex. Debitis, veniam qui dignissimos beatae aperiam eveniet quisquam architecto commodi?</p>
-				<p>Dicta, iure consectetur voluptate adipisci omnis perferendis, facilis, ad voluptates exercitationem inventore impedit nemo. Ad, excepturi sed. Quia a autem culpa distinctio doloribus nam blanditiis est minima dolores impedit incidunt at optio, assumenda voluptate molestias sint, beatae facere architecto quis delectus atque cupiditate totam, veniam fuga! Autem omnis explicabo atque doloribus ullam ad sequi eligendi recusandae deserunt repellendus numquam ratione delectus optio repudiandae ea quibusdam, sint sunt voluptates cumque maxime quisquam incidunt totam corrupti! Eveniet esse ipsum ex animi consectetur eius excepturi voluptas illo? Necessitatibus, nemo! Reiciendis sed aperiam, voluptate, molestias dignissimos aliquid laudantium fuga, numquam cumque distinctio earum assumenda?</p>
-				<p>Quidem sit quaerat iure doloremque? Eius omnis voluptatem ex tempore, excepturi saepe vel quod, maxime eum delectus explicabo ut nobis dolorem odio unde nihil obcaecati rerum, neque earum placeat labore incidunt. Illum rem, dolorem temporibus blanditiis eligendi esse et maiores deserunt laudantium! Excepturi impedit deleniti explicabo quos quas. Tempore magni dolorem voluptate eius voluptatibus eveniet aliquam enim. Ipsam repellat cupiditate explicabo, consequuntur quia blanditiis ut delectus perferendis, nisi, voluptatem tenetur? Odit dignissimos nesciunt iste? Cum similique, harum reprehenderit earum beatae sunt! Fugiat maiores molestias voluptatibus aliquam, cupiditate cumque, fugit tempore, vitae porro accusamus dicta consequuntur? Eius praesentium ipsam ipsa nulla!</p>
-				<p>Saepe velit dicta cupiditate corrupti ullam et quasi exercitationem voluptas impedit distinctio enim optio sit consequatur praesentium labore placeat, voluptate deserunt? Optio quod sint tempora voluptate! Pariatur, accusamus ipsam! Voluptatum, necessitatibus accusamus suscipit dolores blanditiis perferendis quaerat quisquam placeat quasi doloribus. Explicabo officia magni, vitae maxime eligendi laudantium tenetur! Vitae quam, repellat officiis aliquam reiciendis exercitationem officia necessitatibus quae non ipsum voluptates error facilis, ullam accusantium odio dicta itaque porro esse suscipit qui veniam ut nam eos amet. Est nobis libero veritatis, corporis in autem blanditiis nam minus voluptatem quas adipisci alias sed vero explicabo, ad officiis aliquid aut similique?</p>
 			</div>
-
-		</section>
-
-	</main>
-
+    </main>
+    
     <footer class="footer">
       <nav class="navbar-inverse">
         <div class="container">
@@ -227,9 +290,9 @@
       </nav>
     </footer>
 
+
 	<!-- SCRIPTS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script src="style/bootstrap_local/js/bootstrap.min.js"></script>
-</body>
-
+  </body>
 </html>
