--- a/fotofiltrato_logged.html
+++ b/fotofiltrato_logged.html
@@ -119,7 +119,7 @@
             </li>
             <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -141,7 +141,7 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href=".">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
@@ -260,37 +260,37 @@
 
 
 
-	<footer class="footer">
-		<nav class="navbar-inverse">
-			<div class="container">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#facebook">Facebook</a>
-					</li>
-					<li>
-						<a href="#Twitter">Twitter</a>
-					</li>
-					<li>
-						<a href="#LinkedIn">LinkedIn</a>
-					</li>
-					<li>
-						<a href="#YouTube">YouTube</a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a href="mappasito.html">Mappa sito</a>
-					</li>
-					<li>
-						<a href="privacy.html">Privacy Policy</a>
-					</li>
-					<li>
-						<a href="copyright.html">Copyright</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</footer>
+		<footer class="footer">
+			<nav class="navbar-inverse">
+				<div class="container">
+					<ul class="nav navbar-nav">
+						<li>
+							<a href="#facebook">Facebook</a>
+						</li>
+						<li>
+							<a href="#Twitter">Twitter</a>
+						</li>
+						<li>
+							<a href="#LinkedIn">LinkedIn</a>
+						</li>
+						<li>
+							<a href="#YouTube">YouTube</a>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="mappasito_logged.html">Mappa sito</a>
+						</li>
+						<li>
+							<a href="privacy_logged.html">Privacy Policy</a>
+						</li>
+						<li>
+							<a href="copyright_logged.html">Copyright</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</footer>
 
 	<!-- SCRIPTS -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
