--- a/gen_logged.html
+++ b/gen_logged.html
@@ -117,7 +117,7 @@
             </li>
             <!-- Contattaci -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -169,7 +169,7 @@
 
         <div class="panel-body">
           <header>
-            <h2>Articoli di Gennaio 2018</h2>
+            <h1>Articoli di Gennaio 2018</h1>
           </header>
 
           <div class="row">
@@ -234,13 +234,13 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="mappasito.html">Mappa sito</a>
+              <a href="mappasito_logged.html">Mappa sito</a>
             </li>
             <li>
-              <a href="privacy.html">Privacy Policy</a>
+              <a href="privacy_logged.html">Privacy Policy</a>
             </li>
             <li>
-              <a href="copyright.html">Copyright</a>
+              <a href="copyright_logged.html">Copyright</a>
             </li>
           </ul>
         </div>
