Aggiunta ricerca news

--- a/news_logged.html
+++ b/news_logged.html
@@ -315,7 +315,7 @@
                 <div class="panel-heading">
                   <h4>Cerca un articolo</h4>
                 </div>
-                <form class="panel-body" action="ricerca_logged.html">
+                <form class="panel-body" action="ricercanews_logged.html">
                   <label class="sr-only" for="blogsearch">Cerca</label> 
                   <input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
                 </form>
