--- a/notizia.html
+++ b/notizia.html
@@ -224,7 +224,7 @@
                 <div class="panel-heading">
                   <h4>Cerca un articolo</h4>
                 </div>
-                <form class="panel-body" action="ricerca.html">
+                <form class="panel-body" action="ricercanews.html">
                   <label class="sr-only" for="blogsearch">Cerca</label> 
                   <input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
                 </form>
