Tolta ricerca da notizia singola

--- a/notizia.html
+++ b/notizia.html
@@ -220,32 +220,10 @@
 						</section>
 
             <aside class="col-md-3">
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h4>Cerca un articolo</h4>
-                </div>
-                <form class="panel-body" action="ricercanews.html">
-                  <label class="sr-only" for="blogsearch">Cerca</label> 
-                  <input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
-                </form>
-              </div>
 
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4>Tags</h4>
-                </div>
-                <div class="panel-body">
-                  <a href="#" class="label label-danger">danger</a>
-                  <a href="#" class="label label-success">earth</a>
-                  <a href="#" class="label label-warning">flight</a>
-                  <a href="#" class="label label-info">sky</a>
-                  <a href="#" class="label label-primary">space</a>
-                  <a href="#" class="label label-default">universe</a>
-                </div>
-              </div>
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h4>Articoli recenti</h4>
+                  <h4>Articoli correlati</h4>
                 </div>
                 <div class="panel-body">
                   <ul>
