Fix ricerca news

--- a/ricercanews_logged.html
+++ b/ricercanews_logged.html
@@ -160,7 +160,8 @@
 
       <ol class="breadcrumb">
 				<li><a href="index_logged.html">Home</a></li>
-        <li class="active">News</li>
+        <li><a href="news_logged.html">News</a></li>
+        <li class="active">Risultati ricerca</li>
 			</ol>
       
       <div class="panel panel-default">
