--- a/ricercanews.html
+++ b/ricercanews.html
@@ -183,7 +183,8 @@
 
       <ol class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
-        <li class="active">News</li>
+        <li><a href="news.html">News</a></li>
+        <li class="active">Risultati ricerca</li>
 			</ol>
       
       <div class="panel panel-default">
